# fastapi-lakehouse

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
data/: create_faker_data.dbc
